--- a/about.html
+++ b/about.html
@@ -273,7 +273,7 @@ Company Culture
 <a id="cs-qq" target="_blank" style="margin-bottom:10px;display:block;" href="https://www.facebook.com/people/Haha-Pie/100077207607180/">
 <img src="./关于我们-2022世界杯亚洲区预总赞助商_files/cs-qq.png">
 </a>
-<a id="cs-tg" target="_blank" style="display:block;" href="https://t.me/bf16800">
+<a id="cs-tg" target="_blank" style="display:block;" href="https://t.me/haha12345666">
 <img src="./关于我们-2022世界杯亚洲区预总赞助商_files/cs.png">
 </a>
 <p>在线咨询</p>
