--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@ Company Culture
 </div>
 </footer>
 <div class="cs-box">
-<a id="cs-qq" target="_blank" style="margin-bottom:10px;display:block;" href="https://www.facebook.com/people/Haha-Pie/100077207607180/">
+<a id="cs-qq" target="_blank" style="margin-bottom:10px;display:block;" href="https://www.facebook.com/profile.php?id=100077754545712/">
 <img src="./关于我们-2022世界杯亚洲区预总赞助商_files/cs-qq.png">
 </a>
 <a id="cs-tg" target="_blank" style="display:block;" href="https://t.me/haha12345666">
