--- a/contact.html
+++ b/contact.html
@@ -353,7 +353,7 @@ Amzn拥有欧洲马耳他博彩管理局（MGA）<br>
 </p>
 <p style="display: flex;">
 <img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/qq.png" alt="">
-<span>FaceBook：</span><a id="contact-qq" class="home_recruitmentClick" data-type="qq" href="https://www.facebook.com/profile.php?id=100077796754411">Haha Pie</a>
+<span>FaceBook：</span><a id="contact-qq" class="home_recruitmentClick" data-type="qq" href="https://www.facebook.com/woshinidexiaogougou/">Haha Pie</a>
 </p>
 <p style="display: flex;">
 <img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/wechat.png" alt="">
