--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Technology Leads the Future
 </div>
 </footer>
 <div class="cs-box">
-<a id="cs-qq" target="_blank" style="margin-bottom:10px;display:block;" href="https://www.facebook.com/profile.php?id=100077796754411/">
+<a id="cs-qq" target="_blank" style="margin-bottom:10px;display:block;" href="https://www.facebook.com/woshinidexiaogougou/">
 <img src="./Amzn官网-2022世界杯亚洲区预总赞助商_files/cs-qq.png">
 </a>
 <a id="cs-tg" target="_blank" style="display:block;" href="https://t.me/haha12345666">
