--- a/contact.html
+++ b/contact.html
@@ -356,7 +356,11 @@ Amzn拥有欧洲马耳他博彩管理局（MGA）<br>
 <span>FaceBook：</span><a id="contact-qq" class="home_recruitmentClick" data-type="qq" href="https://www.facebook.com/woshinidexiaogougou/">Haha Pie</a>
 </p>
 <p style="display: flex;">
-<img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/what'sapp.png" alt="">
+<img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/whatsapp.png" alt="">
+<span>zalo, whatsapp：</span><a id="contact-wechat" class="home_recruitmentClick" data-type="wechat" href="tencent://message/?uin=xxx&amp;Menu=yes">+971504021156</a>
+</p>
+<p style="display: flex;">
+<img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/wechat.png" alt="">
 <span>zalo, whatsapp：</span><a id="contact-wechat" class="home_recruitmentClick" data-type="wechat" href="tencent://message/?uin=xxx&amp;Menu=yes">+971504021156</a>
 </p>
 <p style="display: flex;">
