--- a/contact.html
+++ b/contact.html
@@ -361,7 +361,7 @@ Amzn拥有欧洲马耳他博彩管理局（MGA）<br>
 </p>
 <p style="display: flex;">
 <img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/wechat.png" alt="">
-<span>zalo, whatsapp：</span><a id="contact-wechat" class="home_recruitmentClick" data-type="wechat" href="tencent://message/?uin=xxx&amp;Menu=yes">pie250122</a>
+<span>Wechat：</span><a id="contact-wechat" class="home_recruitmentClick" data-type="wechat" href="tencent://message/?uin=xxx&amp;Menu=yes">pie250122</a>
 </p>
 <p style="display: flex;">
 <img style="height:20px;margin-right: 5px;" src="./联系我们-2022世界杯亚洲区预总赞助商_files/telegram.png" alt="">
